Fix card dimensions on mobile.

--- a/src/styles/components/_path-card.scss
+++ b/src/styles/components/_path-card.scss
@@ -14,7 +14,7 @@
 
 .w-path-card {
   @include w-body-text();
-  padding: 32px;
+  padding: 24px;
 }
 
 .w-path-card__info {
